--- a/learn-basic-css-by-building-a-cafe-menu/styles.css
+++ b/learn-basic-css-by-building-a-cafe-menu/styles.css
@@ -1,7 +1,97 @@
 body {
-  background-color: brown;
+  background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+  font-family: sans-serif;
+  padding: 20px;
 }
 
 h1, h2, p {
   text-align: center;
+}
+
+h1, h2 {
+  font-family: Impact,serif;
+}
+
+h1 {
+  font-size: 40px;
+  margin-top: 0px; /* 浏览器对 h1 元素有一些默认顶部 margin */
+  margin-bottom: 15px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+hr {
+  height: 2px;
+  background-color: brown;
+  border-color: brown;
+  border-width: 1px;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -25px;
+}
+
+.menu {
+  width: 80%;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  max-width: 500px;
+}
+
+.flavor, .dessert {
+  text-align: left;
+  width: 75%;
+}
+
+.price {
+  text-align: right;
+  width: 25%;
+}
+
+.item p {
+  /* 把 p 元素设置为内联元素 */
+  display: inline-block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+.bottom-line {
+  margin-top:25px;
+}
+
+.established {
+  font-style: italic;
+}
+
+/* FOOTER */
+footer {
+  font-size: 14px;
+}
+
+a {
+  color: black;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: brown;
+}
+
+a:active {
+  color: brown;
+}
+
+.address {
+  margin-bottom: 5px;
 }
